TPLTRIPOD-55 #resolve Footer navbar menu hover is distorted

--- a/code/less/template.less
+++ b/code/less/template.less
@@ -1200,6 +1200,9 @@ div:first-child+.panel{
 		a{
 			color : @color_five;
 		}
+		.navbar .nav > li:hover > a:before, .navbar .nav > li:hover > a:after{
+			content: none;
+		}
 	}
 	&.sticky{
 		border-bottom: 10px solid @bodyBackground;
